--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.1",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
     "lucide-react": "^0.445.0",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
+    "react-select": "^5.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
