--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@auth0/auth0-react": "^2.2.4",
     "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.1",
+    "axios": "^1.7.7",
+    "ethers": "^6.13.2",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
     "lucide-react": "^0.445.0",
@@ -21,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
-    "react-select": "^5.8.1"
+    "react-select": "^5.8.1",
+    "web3": "^4.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
